--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,18 @@ repositories {
     mavenCentral()
 }
 
+
+
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
     implementation 'com.discord4j:discord4j-core:3.2.8'
+    implementation 'com.github.sarxos:webcam-capture:0.3.12'
+    implementation 'net.sourceforge.tess4j:tess4j:5.4.0'
+    implementation 'org.slf4j:slf4j-simple:2.0.16'
 }
 
 test {
